# alter

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PRD-alter-v0.2.md  PRD-alter-v0.3.md  PRD-alter-v0.4.md  PRD-alter-v0.5.md  PRD-alter.md  README.md  demo.tape  install.ps1
.cargo/: audit.toml
.github/workflows/: release.yml
scripts/: downloads.ps1
src/: error.rs  main.rs  platform.rs
src/contacts/: mod.rs
src/crypto/: handshake.rs  mod.rs  padding.rs
src/identity/: keypair.rs  mod.rs  pm.rs  vault.rs
src/session/: file_transfer.rs  mod.rs
src/transport/: frame.rs  lan.rs  mod.rs  obfs4.rs  tor.rs
src/tui/: app.rs  auth.rs  chat.rs  contact.rs  mod.rs  pm.rs  types.rs  ui.rs
src/tui/ui/: auth.rs  helpers.rs  image.rs  main.rs  migrate.rs  mod.rs  modals.rs  pm.rs  theme.rs
