[package]
name = "alter"
version = "0.5.1"
edition = "2021"
license = "GPL-3.0-only"
# Dinaikkan dari 1.75 ke 1.89 di M2: arti-client 0.43.x (sesuai PRD) butuh rustc >= 1.89.
rust-version = "1.89"

[[bin]]
name = "alter"
path = "src/main.rs"

[dependencies]
# Identity signing (Ed25519)
ed25519-dalek = { version = "2.2", features = ["rand_core", "zeroize"] }

# Noise handshake DH (X25519 — kept separate from Ed25519 identity)
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }

# Noise Protocol Framework (Noise_IK pattern)
snow = "0.10"

# Key derivation from passphrase (Argon2id)
argon2 = "0.5"

# AEAD for vault encryption (ChaCha20Poly1305)
chacha20poly1305 = "0.10"

# Secure memory zeroing (all secrets implement ZeroizeOnDrop)
zeroize = { version = "1", features = ["derive"] }

# CSPRNG
rand = "0.8"

# Error handling
thiserror = "2"

# Hex encoding untuk fingerprint identitas (dipakai juga di runtime, bukan cuma test)
hex = "0.4"

# Async runtime (networking + TUI event loop)
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "sync", "time", "io-util", "macros", "rt"] }

# Terminal UI
ratatui = "0.29.0"
crossterm = "0.29.0"

# LAN service discovery
mdns-sd = "0.20.0"

# Enumerasi interface jaringan: untuk menyiarkan hanya IP LAN asli (buang
# link-local 169.254.x / adapter virtual) saat advertise mDNS. Versi disamakan
# dengan yang sudah ditarik transitif oleh mdns-sd (tanpa dependensi baru).
if-addrs = "0.15"

# Invite code encoding
base64 = "0.22.1"

# KDF untuk enkripsi file kontak (key diturunkan dari identity)
blake2 = "0.10"

# Clipboard lintas platform (salin invite dengan tombol 'c')
arboard = "3"

# M6: serialisasi PM entries ke JSON (disimpan terenkripsi di slot A vault v2)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tor (M2/M5). default-features=false untuk drop native-tls/openssl (pakai rustls saja,
# penting agar build di Windows tidak butuh OpenSSL/perl).
# M5: tambah experimental-api (insert_service_discovery_key) + restricted-discovery.
arti-client = { version = "0.43.0", default-features = false, features = ["tokio", "rustls", "onion-service-service", "onion-service-client", "compression", "experimental-api", "restricted-discovery"] }
tor-rtcompat = { version = "0.43.0", default-features = false, features = ["tokio", "rustls"] }

# Compat futures<->tokio untuk StreamExt di tor.rs
futures = "0.3.32"

# Tipe Tor yang tidak di-reexport arti-client
tor-hsservice = { version = "0.43.0", features = ["restricted-discovery"] }  # OnionServiceConfigBuilder, restricted discovery
tor-cell = "0.43.0"        # Connected (untuk StreamRequest::accept)
safelog = "0.8"            # DisplayRedacted untuk ambil string .onion dari HsId

# M5: kriptografi Tor untuk restricted discovery (client auth key types)
tor-hscrypto = "0.43.0"    # HsClientDescEncKey, HsClientDescEncSecretKey, HsClientDescEncKeypair
tor-llcrypto = "0.43.0"    # curve25519::StaticSecret, curve25519::PublicKey

# FT-01: render gambar di terminal (Kitty/Sixel/half-block auto-detect)
# print-file: aktifkan viuer::print_from_file (baca dari path, bukan DynamicImage)
viuer = { version = "0.9", features = ["print-file"] }

# FT-01: deteksi MIME type dari magic bytes (bukan ekstensi file)
infer = "0.16"

# FT-01: tempfile untuk render_image_inline (viuer butuh path, bukan slice)
tempfile = "3"

# FT-01: SHA-256 untuk integritas end-to-end (sha2 sudah transitive, tapi deklarasi eksplisit)
sha2 = "0.10"

# rusqlite ditarik transitif oleh arti (state storage). Paksa fitur `bundled`
# agar sqlite dikompilasi dari source — di Windows tidak ada sqlite3.lib sistem.
rusqlite = { version = "0.39", features = ["bundled"] }

# rustls butuh CryptoProvider terpasang eksplisit (kita pakai ring) sebelum
# bootstrap Tor — lihat install_default() di main.rs.
rustls = { version = "0.23", features = ["ring"] }

[dev-dependencies]

# SEC-09: prctl (Linux) / pthread_setname_np (macOS) untuk set nama proses.
# Windows memakai SetConsoleTitleW via FFI langsung — tidak butuh libc.
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = "0.2"

[profile.release]
# Strip debug info for smaller binary; symbols not needed in production
strip = true
# Optimize for binary size without sacrificing speed
opt-level = "z"
lto = true
codegen-units = 1
